Created students data

--- a/NIBMConnect/com/nibm/storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/NIBMConnect/com/nibm/storyboards/Base.lproj/LaunchScreen.storyboard
@@ -17,13 +17,34 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.38750307770244796" green="1" blue="0.24921951122780706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="U2I-Jj-cRN">
+                                <rect key="frame" x="137" y="270" width="140.5" height="65"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NIBM Connect" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kAf-CS-55Y">
+                                <rect key="frame" x="131" y="412" width="152" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.33470287221545514" green="0.56791931356132697" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="kAf-CS-55Y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="131" id="kLZ-lk-RyV"/>
+                            <constraint firstItem="kAf-CS-55Y" firstAttribute="top" secondItem="U2I-Jj-cRN" secondAttribute="bottom" constant="77" id="mfH-Pc-lYc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kAf-CS-55Y" secondAttribute="trailing" constant="131" id="ofk-vb-GBa"/>
+                            <constraint firstItem="U2I-Jj-cRN" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="pZr-ba-RIb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="kAf-CS-55Y" secondAttribute="bottom" constant="421" id="q2k-jI-eAF"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="140.5" height="65"/>
+    </resources>
 </document>
